logs/twyg.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/twyg'...
Compiling './lib/python3.5/site-packages/twyg/cairowrapper.py'...
***   File "./lib/python3.5/site-packages/twyg/cairowrapper.py", line 32
    raise ValueError, 'Invalid color mode: ' + mode
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/cmdline.py'...
***   File "./lib/python3.5/site-packages/twyg/cmdline.py", line 79
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/colorizer.py'...
***   File "./lib/python3.5/site-packages/twyg/colorizer.py", line 206
    raise ValueError, 'Unrecognized colorizer name: %s' % name
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twyg/colors'...
Compiling './lib/python3.5/site-packages/twyg/common.py'...
***   File "./lib/python3.5/site-packages/twyg/common.py", line 39
    raise ValueError, 'Invalid percentage margin value: %s' % v
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/config.py'...
***   File "./lib/python3.5/site-packages/twyg/config.py", line 351
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twyg/configs'...
Compiling './lib/python3.5/site-packages/twyg/connection.py'...
***   File "./lib/python3.5/site-packages/twyg/connection.py", line 335
    raise ValueError, 'Unrecognized connection drawer name: %s' % name
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/css3colors.py'...
***   File "./lib/python3.5/site-packages/twyg/css3colors.py", line 299
    raise ValueError, ('Invalid color: %s' % col)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twyg/defaults'...
Listing './lib/python3.5/site-packages/twyg/defaults/colorizer'...
Listing './lib/python3.5/site-packages/twyg/defaults/connection'...
Listing './lib/python3.5/site-packages/twyg/defaults/layout'...
Listing './lib/python3.5/site-packages/twyg/defaults/node'...
Compiling './lib/python3.5/site-packages/twyg/geom.py'...
***   File "./lib/python3.5/site-packages/twyg/geom.py", line 20
    raise ValueError, "Must specify 'x' and 'y' of new vector"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/hyphenator.py'...
***   File "./lib/python3.5/site-packages/twyg/hyphenator.py", line 520
    print '-'.join(hyphenate_word(word))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/layout.py'...
***   File "./lib/python3.5/site-packages/twyg/layout.py", line 313
    raise ValueError, 'Unrecognized layout name: %s' % name
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/node.py'...
***   File "./lib/python3.5/site-packages/twyg/node.py", line 184
    textwidth_func = lambda(txt): textwidth(_ctx, txt,
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/twyg/tree.py'...
***   File "./lib/python3.5/site-packages/twyg/tree.py", line 20
    raise ValueError, 'Invalid direction: %s' % d
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twyg-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
